package com.example.authorsystem.model;

public class Author {
}
