package com.example.authorsystem.repository;

public class AuthorRepository {
}
