package com.example.authorsystem.service;

public class AuthorService {
}
